Package name update to MouseGastrulationData

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: EmbryoData
+Package: MouseGastrulationData
 Title: Single-Cell Transcriptomics Data across Mouse Gastrulation and Early Organogenesis
 Version: 0.98.0
 Date: 2019-05-29
