--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(EmbryoAtlasData)
 export(Tal1ChimeraData)
 export(WTChimeraData)
 importClassesFrom(S4Vectors,DataFrame)
+importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,sizeFactors)
 importFrom(ExperimentHub,ExperimentHub)
+importFrom(S4Vectors,List)
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(methods,as)
