--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,5 +24,5 @@ VignetteBuilder:
 License: GPL-3
 NeedsCompilation: no
 Encoding: UTF-8
-biocViews: ExperimentData, ExpressionData, SequencingData, RNASeqData, SingleCellData
+biocViews: ExperimentData, ExpressionData, SequencingData, RNASeqData, SingleCellData, ExperimentHub
 RoxygenNote: 6.1.1
