--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: MouseGastrulationData
 Title: Single-Cell Transcriptomics Data across Mouse Gastrulation and Early Organogenesis
-Version: 0.99.5
-Date: 2019-06-17
+Version: 0.99.6
 Authors@R: c(
     person("Jonathan", "Griffiths", email = "jonathan.griffiths.94@gmail.com", role = c("aut", "cre")),
     person("Aaron", "Lun", email = "infinite.monkeys.with.keyboards@gmail.com", role = "aut"))
@@ -9,6 +8,7 @@ Description:
     Provides processed and raw count matrices for single-cell RNA sequencing data 
     from a timecourse of mouse gastrulation and early organogenesis.
 Depends: 
+    R (>= 3.6.0),
     SingleCellExperiment
 Imports:
     methods,
@@ -25,4 +25,6 @@ License: GPL-3
 NeedsCompilation: no
 Encoding: UTF-8
 biocViews: ExperimentData, ExpressionData, SequencingData, RNASeqData, SingleCellData, ExperimentHub
+URL: https://github.com/MarioniLab/MouseGastrulationData
+BugReports: https://github.com/MarioniLab/MouseGastrulationData/issues
 RoxygenNote: 6.1.1
