Fix link to scRNAseq package, import row/colData explicitly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,6 @@ importFrom(BiocGenerics,sizeFactors)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,List)
 importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
 importFrom(methods,as)
