--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description:
     from a timecourse of mouse gastrulation and early organogenesis.
 Depends: 
     R (>= 3.6.0),
-    SingleCellExperiment
+    SingleCellExperiment,
     SummarizedExperiment
 Imports:
     methods,
