--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ VignetteBuilder:
 License: GPL-3
 NeedsCompilation: no
 Encoding: UTF-8
-biocViews: ExperimentData, ExpressionData, SequencingData, RNASeqData, SingleCellData, ExperimentHub, ATACSeq, Mus_musculus_Data
+biocViews: ExperimentData, ExpressionData, SequencingData, RNASeqData, SingleCellData, ExperimentHub, Mus_musculus_Data
 URL: https://github.com/MarioniLab/MouseGastrulationData
 BugReports: https://github.com/MarioniLab/MouseGastrulationData/issues
 RoxygenNote: 7.1.1
