First Lohoff getter version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,18 @@ export(BPSATACData)
 export(EmbryoAtlasData)
 export(EmbryoCelltypeColours)
 export(GuibentifExtraData)
+export(LohoffSeqFISHData)
 export(TChimeraData)
 export(Tal1ChimeraData)
 export(WTChimeraData)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,sizeFactors)
+importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,List)
 importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SpatialExperiment,SpatialExperiment)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(methods,as)
