--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,12 @@ importFrom(BiocGenerics,sizeFactors)
 importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,List)
+importFrom(SingleCellExperiment,"reducedDims<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SpatialExperiment,"spatialCoords<-")
 importFrom(SpatialExperiment,SpatialExperiment)
+importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(methods,as)
