Fix for BumpyMatrix cbind

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(Tal1ChimeraData)
 export(WTChimeraData)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(BiocGenerics,"sizeFactors<-")
+importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
