Changes to support SpatialExperiment update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,10 @@ importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,List)
 importFrom(SingleCellExperiment,"reducedDims<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
-importFrom(SpatialExperiment,"spatialCoords<-")
+importFrom(SpatialExperiment,"spatialCoordsNames<-")
+importFrom(SpatialExperiment,"spatialData<-")
 importFrom(SpatialExperiment,SpatialExperiment)
+importFrom(SpatialExperiment,spatialData)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,colData)
