Finish robustness updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(WTChimeraData)
 importClassesFrom(S4Vectors,DataFrame)
 importFrom(BiocGenerics,"sizeFactors<-")
 importFrom(BiocGenerics,cbind)
+importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
