--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(BiocGenerics,rbind)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,List)
 importFrom(SingleCellExperiment,"reducedDims<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
