Add multiome data accessors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(EmbryoAtlasData)
 export(EmbryoCelltypeColours)
 export(GuibentifExtraData)
 export(LohoffSeqFISHData)
+export(RAMultiomeData)
+export(RASampleMetadata)
 export(TChimeraData)
 export(Tal1ChimeraData)
 export(WTChimeraData)
@@ -18,6 +20,7 @@ importFrom(BumpyMatrix,BumpyMatrix)
 importFrom(ExperimentHub,ExperimentHub)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,List)
+importFrom(SingleCellExperiment,"altExp<-")
 importFrom(SingleCellExperiment,"reducedDims<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SpatialExperiment,"spatialCoordsNames<-")
